@@ -4,6 +4,8 @@
 * [Bug 2995] Fixes to compile on Windows
 * [Bug 3010] remote configuration trustedkey/requestkey values
   are not properly validated. perlinger@ntp.org
+  - sidekick: Ignore keys that have an unsupported MAC algorithm
+    but are otherwise well-formed
 
 ---
 (4.2.8p6) 2016/01/20 Released by Harlan Stenn <stenn@ntp.org>
